--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons File</name>
   <artifactId>dc-commons-file</artifactId>
-  <version>5.0.2-SNAPSHOT'</version>
+  <version>5.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
