--- a/dc-commons-web/pom.xml
+++ b/dc-commons-web/pom.xml
@@ -10,7 +10,7 @@
   
   <name>DigitalCollections: Commons Web</name>
   <artifactId>dc-commons-web</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   
   <properties>
