--- a/dc-commons-springmvc/pom.xml
+++ b/dc-commons-springmvc/pom.xml
@@ -15,7 +15,7 @@
 
   <properties>
     <version.assertj>3.22.0</version.assertj>
-    <version.dc-model>10.0.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>9.2.0</version.dc-model>
     <version.guava>29.0-jre</version.guava>
     <version.junit>5.8.2</version.junit>
     <version.mockito-core>4.4.0</version.mockito-core>
